# opencv

./: .gitignore  CMakeLists.txt
src/: DisplayImage.cpp  DisplayImage.h  main.cpp
